# rphys-renderer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/rphys-audio/: Cargo.toml
crates/rphys-audio/src/: lib.rs
crates/rphys-cli/: Cargo.toml
crates/rphys-cli/src/: main.rs
crates/rphys-export/: Cargo.toml
crates/rphys-export/src/: lib.rs
crates/rphys-overlay/: Cargo.toml
crates/rphys-overlay/src/: error.rs  lib.rs  overlay.rs  text.rs
crates/rphys-physics/: Cargo.toml
crates/rphys-physics/src/: engine.rs  lib.rs  types.rs
crates/rphys-preview/: Cargo.toml
crates/rphys-preview/src/: lib.rs
crates/rphys-race/: Cargo.toml
crates/rphys-race/src/: countdown.rs  lib.rs  tracker.rs  types.rs
crates/rphys-renderer/: Cargo.toml
crates/rphys-renderer/examples/: render_frame.rs
crates/rphys-renderer/src/: camera.rs  lib.rs  trail.rs  vfx.rs
crates/rphys-scene/: Cargo.toml
crates/rphys-scene/src/: de.rs  lib.rs  parse.rs  schema.rs  types.rs  vfx.rs
crates/rphys-vfx/: Cargo.toml
crates/rphys-vfx/src/: blend.rs  engine.rs  error.rs  lib.rs  particle.rs  rng.rs
docs/architecture/: dependencies.md  modules.md  scene-schema.md  sprint2-race-mode.md  system-overview.md
docs/reviews/: review-scene-v1.md
docs/stories/: STORY-001-scene-parsing.md  STORY-002-physics-engine.md  STORY-003-renderer.md  STORY-004-live-preview.md  STORY-005-video-export.md  STORY-006-audio.md  STORY-007-cli.md  STORY-008-example-scenes.md
examples/: race.yaml
