[workspace]
resolver = "2"
members = [
    "crates/rphys-scene",
    "crates/rphys-physics",
    "crates/rphys-renderer",
    "crates/rphys-audio",
    "crates/rphys-preview",
    "crates/rphys-export",
    "crates/rphys-cli",
]

# ── Shared dependency versions ────────────────────────────────────────────────
# All versions verified against crates.io on 2026-03-08.
# Update by running: curl -s https://crates.io/api/v1/crates/<name> | python3 -c "..."
[workspace.dependencies]
# Scene parsing
serde     = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0.18"

# Physics
rapier2d = { version = "0.32.0", features = ["enhanced-determinism"] }

# Rendering
tiny-skia = "0.12.0"

# Windowing / preview
winit  = "0.30.13"
pixels = "0.15.0"
notify = "8.2.0"

# Audio
rodio = "0.22.2"
hound = "3.5.1"

# CLI
clap   = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"

# Export
tempfile = "3.26.0"

# Internal workspace crates
rphys-scene = { path = "crates/rphys-scene" }
