[package]
name = "rphys-export"
version = "0.1.0"
edition = "2021"
description = "Video export pipeline for rphys-renderer"

[dependencies]
thiserror  = { workspace = true }
tempfile   = { workspace = true }
rphys-scene    = { workspace = true }
rphys-physics  = { path = "../rphys-physics" }
rphys-renderer = { path = "../rphys-renderer" }
rphys-audio    = { path = "../rphys-audio" }
