[package]
name = "rphys-renderer"
version = "0.1.0"
edition = "2021"
description = "CPU software renderer for rphys-renderer"

[dependencies]
thiserror  = { workspace = true }
tiny-skia  = { workspace = true }
rphys-scene   = { workspace = true }
rphys-physics = { path = "../rphys-physics" }

[dev-dependencies]
png = { workspace = true }
